--- a/react-version/public/index.html
+++ b/react-version/public/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Site description" />
+  <meta name="keywords" content="your, keywords" />
+  <meta name="author" content="Author" />
+
+  <meta property="og:description" content="your site description" />
+  <meta property="og:url" content="https://example.com" />
+  <meta property="og:site_name" content="Site name" />
+  <meta property="og:image" content="logo" />
+
+  <!--meta twitter-->
+  <meta name="twitter:card" content="summary" />
+  <meta property="twitter:image" content="logo" />
+  <meta property="twitter:title" content="Site name" />
+  <meta property="twitter:description" content="your site description" />
+  <!-- end meta twitter-->
+
+  <title>Your site</title>
+
+  <!-- Watch css, run "npm run watch" to watch the class change -->
+  <link rel="stylesheet" href="./assets/base/tailwindcss/output.css" />
+
+  <!-- Font Style -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+
+  <!-- Minify CSS, make sure you run "npm run watch" and then 
+      "npm run minify" to generate new minify data if there is a change 
+  -->
+  <!-- <link rel="stylesheet" href="./assets/base/tailwindcss/output.min.css"> -->
 </head>
+
 
 <body>
   <div id="root"></div>
 </body>
+
+<!-- Custom Javascript -->
+<!-- <script src="./assets/custom/js/script.js"></script> -->
 
 </html>
