--- a/react-version/public/index.html
+++ b/react-version/public/index.html
@@ -21,19 +21,17 @@
   <meta property="twitter:description" content="your site description" />
   <!-- end meta twitter-->
 
-  <title>Your site</title>
+  <title>Portfolio Website</title>
 
-  <!-- Watch css, run "npm run watch" to watch the class change -->
-  <link rel="stylesheet" href="./assets/base/tailwindcss/output.css" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon.png" />
+
+
 
   <!-- Font Style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <!-- Minify CSS, make sure you run "npm run watch" and then 
-      "npm run minify" to generate new minify data if there is a change 
-  -->
-  <!-- <link rel="stylesheet" href="./assets/base/tailwindcss/output.min.css"> -->
 </head>
 
 
